syntax = "proto3";

package plugin;

option csharp_namespace = "DStream.Plugin";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

// ──────────────────────────────────────────────────────────────────────────────
//  Field-schema definition
// ──────────────────────────────────────────────────────────────────────────────
message FieldSchema {
  string name        = 1;    // e.g. "lock", "provider"
  string type        = 2;    // "string", "list", "object", …
  bool   required    = 3;
  string description = 4;
  repeated FieldSchema fields = 5; // populated when type == "object"
}

message GetSchemaResponse {
  repeated FieldSchema fields = 1;
}

// ──────────────────────────────────────────────────────────────────────────────
//  Plugin RPC surface
// ──────────────────────────────────────────────────────────────────────────────
service Plugin {
  rpc GetSchema (google.protobuf.Empty)  returns (GetSchemaResponse);
  rpc Start     (google.protobuf.Struct) returns (google.protobuf.Empty);
}
